css/ui.css
* {
  box-sizing: border-box;
}

#intro {
  position: fixed;
  inset: 0;
  background: rgba(20, 20, 20, 0.98);

  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  font-family: "Pixelify Sans", sans-serif;
  color: #fffaea;
  letter-spacing: 0.05em;

  z-index: 100;
  transition: opacity 0.8s ease;
}

.name-input-container {
  position: absolute;
  height: 58px;
  width: 290px;

  display: flex;
  flex-direction: column;
  align-items: flex-start;

  gap: 10px;
  margin-top: 250px;
  margin-bottom: 25px;
}

.name-input-container label {
  font-size: 1rem;
  text-shadow: 0 0 10px rgba(252, 255, 181, 0.3);
  letter-spacing: 0.05em;
}

#horseName {
  height: 29px;
  width: 245px;

  text-align: center;
  padding: 5px 20px;

  border-radius: 8px;
  border: 3px solid #daa520;
  background: #fff;

  color: #332e2e;
  font-size: 1rem;
  font-family: inherit;

  transition: all 0.3s ease;
}

#startBtn {
  position: absolute;
  display: flex;
  width: 125px;
  height: 39px;
  padding: 10px 19px 10px 18px;
  justify-content: center;
  align-items: center;

  margin-top: 390px;

  font-family: "Pixelify Sans", sans-serif;
  font-size: 16px;
  color: white;
  cursor: pointer;
  border-radius: 8px;
  border: 2px solid #fffaea;
  background: #daa520;
}

.footer {
  position: fixed;
  bottom: 0;
  font-family: "Pixelify Sans", sans-serif;
  width: 100%;
  height: 100px;
  padding: 1rem;
  border-top: 4px solid #daa520;
  background: #8d2c2c;
  text-align: center;
  z-index: 99;
}

.footer-nav {
  display: flex;
  justify-content: center;
  gap: 1.5rem;
}

.footer-nav a {
  width: 183px;
  text-decoration: none;
  color: #daa520;
  font-weight: 500;
  font-size: 1.5rem;
  transition: transform 0.2s ease;
}

.footer-nav a:hover {
  transform: translateY(-1px);
  color: rgb(255, 217, 120);
}

.footer-nav a.active {
  color: rgb(255, 217, 120);
}

.footer-text {
  padding-top: 5px;
  font-size: 0.8rem;
  color: #e3ca8a;
}

